# Orbitalik-rs

./: Cargo.toml
data/: tle.txt  tle_fetching_settings.json
frontend/: craco.config.js  package-lock.json  package.json
frontend/src/: App.js  index.css  index.js
frontend/src/components/CesiumViewer/: CesiumViewer.jsx
frontend/src/components/CoordsViewer/: CoordsViewer.jsx
frontend/src/components/LiveClock/: LiveClock.jsx
frontend/src/components/LookAnglesViewer/: LookAnglesViewer.jsx
frontend/src/components/Navbar/: Navbar.jsx
frontend/src/components/Searchbar/: Searchbar.jsx
frontend/src/features/navbar/: Navbar.jsx  Searchbar.jsx
frontend/src/features/passes-searching/: PassesForm.jsx  PassesList.jsx  PassesSearchingPage.jsx
frontend/src/features/passes-searching/passes-form-sections/: CoordsSection.jsx  FilterParamsSection.jsx  LabeledInput.jsx  SatellitesSearch.jsx  SatellitesSection.jsx  TimeSection.jsx
frontend/src/features/passes-viewing/: CesiumPassViewer.jsx  PassProjectionViewer.jsx  PassViewingPage.jsx
frontend/src/features/satellite-tracking/: SatellitePage.jsx
frontend/src/pages/MainPage/: MainPage.jsx
frontend/src/pages/SatellitePage/: SatellitePage.jsx
frontend/src/shared/components/: AutosuggestField.jsx  CesiumViewer.jsx  CoordsViewer.jsx  LiveClock.jsx  LookAnglesViewer.jsx  OrbitDataViewer.jsx  PassesTable.jsx  SatelliteDataTable.jsx  TableItem.jsx
src/: calculations.rs  fetch_tle.rs  forms.rs  main.rs  serializers.rs  views.rs
static/: base.css
templates/: base.html  get_passes.html  index.html
