[package]
name = "dpp"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
actix-web = "4.5.1"
actix-files = "0.6.5"
tera = "1.19.1"
env_logger = "0.11.3"
serde = { version = "1.0.198", features = ["derive"] }
validator = { version = "0.18.1", features = ["derive"]}
chrono = "0.4.38"
satellite = { git = "https://github.com/richinfante/satellite-rs.git", branch = "master" }
roots = "0.0.8"
thiserror = "1.0.61"