[package]
name = "dpp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-rt = "2.10.0"
tokio = { version = "1.39.2", features = ["full"] }
tera = "1.19.1"
log = "0.4.21"
env_logger = "0.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.121"
validator = { version = "0.18.1", features = ["derive"] }
satellite = { git = "https://github.com/richinfante/satellite-rs.git", branch = "master" }
roots = "0.0.8"
thiserror = "1.0.61"
reqwest = "0.12.5"